--- a/Frontend/css/App.css
+++ b/Frontend/css/App.css
@@ -1,6 +1,16 @@
 #root {
-  max-width: 1280px;
+  height: 100%;
+  width: 100%;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0 auto;
   text-align: center;
+}
+
+body {
+  margin: 0;
+  height: 100vh;
+}
+
+.App {
+  height: 100%;
 }
